# dive-backend-internship-task

./: .env.example  .flake8  Dockerfile  Makefile  README.md  SUBMISSION.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pr.yml  python_app.yml
alembic/: env.py
alembic/versions/: 79a132bbfa78_create_user_and_calorie_entry_tables.py
src/: main.py
src/core/: configvars.py  exceptions.py  request_exception.py
src/db/: database.py  models.py
src/db/repository/: calorie.py  user.py
src/models/: calories.py  user.py
src/routes/: auth.py  calories.py
src/schema/: user.py
src/service/: calorie_cache.py  nutrixion.py
src/utils/: calorie_utils.py  oauth2.py  user_utils.py  utils.py
tests/: conftest.py  test_auth.py  test_calories.py
