[tool.poetry]
name = "dive-backend-engineering-octernship-eetiboah"
version = "0.1.0"
description = "A python app for tracking calorie intake"
authors = ["Emmanuel Tiboah <etiboah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.97.0"
uvicorn = "0.22.0"
alembic = "1.11.1"
python-jose = "3.3.0"
passlib = "1.7.4"
pydantic = "1.10.9"
anyio = "3.7.0"
attrs = "23.1.0"
bcrypt = "4.0.1"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
click = "8.1.3"
crashtest = "0.4.1"
cryptography = "41.0.1"
distlib = "0.3.6"
dnspython = "2.3.0"
dulwich = "0.21.5"
ecdsa = "0.18.0"
email-validator = "2.0.0.post2"
exceptiongroup = "1.1.1"
filelock = "3.12.2"
greenlet = "2.0.2"
h11 = "0.14.0"
html5lib = "1.1"
httpcore = "0.17.2"
httptools = "0.5.0"
httpx = "0.24.1"
idna = "3.4"
importlib-metadata = "6.6.0"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.2.3"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
mako = "1.2.4"
markupsafe = "2.1.3"
more-itertools = "9.1.0"
msgpack = "1.0.5"
orjson = "3.9.1"
packaging = "23.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.5.3"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
ptyprocess = "0.7.0"
pyasn1 = "0.5.0"
pycparser = "2.21"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0"
rapidfuzz = "2.15.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rsa = "4.9"
shellingham = "1.5.0.post1"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.16"
starlette = "0.27.0"
tomli = "2.0.1"
tomlkit = "0.11.8"
trove-classifiers = "2023.5.24"
typing-extensions = "4.6.3"
ujson = "5.8.0"
urllib3 = "1.26.16"
uvloop = "0.17.0"
virtualenv = "20.23.0"
watchfiles = "0.19.0"
webencodings = "0.5.1"
websockets = "11.0.3"
xattr = "0.10.1"
zipp = "3.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
